--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       background-color: #f7f7f7;
       color: #080808;
       height: 150%;
+      font-size: 14px;
     }
 
     .container {
@@ -23,8 +24,8 @@
       height: auto;
     }
     input.form-control {
-    height: 60px; /* Augmenter la hauteur des champs de saisie selon vos besoins */
-    font-size: 20px; /* Modifier la taille de police des champs de saisie si nécessaire */
+    height: 100px; /* Augmenter la hauteur des champs de saisie selon vos besoins */
+    font-size: 40px; /* Modifier la taille de police des champs de saisie si nécessaire */
   }
 
 
@@ -57,13 +58,13 @@
     .btn-primary {
       background-color: #007bff;
       border-color: #007bff;
-      font-size: 150%;
+      font-size: 120%;
     }
 
     .btn-primary:hover {
       background-color: #0069d9;
       border-color: #0062cc;
-      font-size: 150%;
+      font-size: 120%;
     }
 
     header {
@@ -82,6 +83,8 @@
       margin: auto;
       margin-bottom: 20px;
       padding-bottom: 50px;
+      max-width: 100%;
+      height: auto;
     }
 
     .h h1 {
@@ -107,7 +110,7 @@
       text-align: center;
       padding: 20px;
       height: 100%;
-      font-size: 150%;
+      font-size: 120%;
     }
   </style>
 </head>
