--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       display: flex;
       padding: 20px;
     }
+    #message {
+      height: 150px;
+    }
 
     .btn-primary {
       background-color: #007bff;
@@ -110,13 +113,9 @@
     }
     h2{
       text-align: center;
-      color: white;
-      
+      color: white; 
       padding: 20px;
     }
-
-  
-
     .h h1 {
       padding: 5px;
       color: white;
@@ -138,8 +137,6 @@
       text-decoration: none;
       color: white;
     }
-
-
     p {
       
       text-align: center;
